Fixed 1px shift after animation

--- a/src/assets/layout/sass/_menu.scss
+++ b/src/assets/layout/sass/_menu.scss
@@ -23,6 +23,8 @@
             span {
                 margin-left: .25em;
                 vertical-align: middle;
+                line-height: 18px;
+                display: inline-block;
             }
 
             .menuitem-toggle-icon {
